补充中英文文档，增加压缩后的js,css文件

--- a/easyzoom.css
+++ b/easyzoom.css
@@ -16,7 +16,7 @@
 .easyzoom .small,
 .easyzoom .big {
     position: absolute;
-    border: 1px solid green;
+    border: 1px solid #aaa;
 }
 
 .easyzoom .small {
