--- a/hizoom.css
+++ b/hizoom.css
@@ -1,9 +1,9 @@
-.easyzoom {
+.hizoom {
     position: relative;
     z-index:10;
 }
 
-.easyzoom .magnifier {
+.hizoom .magnifier {
     box-sizing: border-box;
     border: 1px solid #999;
     position: absolute;
@@ -14,25 +14,25 @@
     cursor: move;
 }
 
-.easyzoom .small,
-.easyzoom .big {
+.hizoom .small,
+.hizoom .big {
     position: absolute;
     border: 1px solid #ddd;
 }
 
-.easyzoom .small {
+.hizoom .small {
     top: 0;
     left: 0;
     cursor: move;
 }
 
-.easyzoom .big {
+.hizoom .big {
     overflow: hidden;
     display: none;
 }
 
-.easyzoom .small img,
-.easyzoom .big img {
+.hizoom .small img,
+.hizoom .big img {
     position: absolute;
     top: 0;
     left: 0;
